# eswc2026Norke

./: .gitignore  100_perguntas_lgpd.md  _GDPR_qa_test_dataset_v2.csv  _retrieval.csv  _retrieval.txt  _retrieval_original.csv  _retrieval_toon.txt  bench_dinamico.py  bench_dinamico_grafo.py  bench_dinamico_vetor.py  bench_saf.py  bench_saf_grafo.py  bench_saf_vetor.py  benchmark_grafo.csv  benchmark_vetor.csv  buscar_graphdb.py  community.py  elastic_atributo_limpar.py  elastic_perguntas_calcular_score.py  elastic_perguntas_criar_resposta.py  fact_v1.py  gdpr_daily_grafo3_gpt_0405_deepeval.csv  gdpr_kaggle_gemini_1405a_deepeval.csv  gdpr_kaggle_gemini_1505a_deepeval.csv  gdpr_kaggle_gemini_1505b_deepeval.csv  gdpr_kaggle_gemma_1105_deepeval.csv  gdpr_kaggle_gemma_1105a_deepeval.csv  gdpr_kaggle_gemma_1105b_deepeval.csv  gdpr_kaggle_maritaca_1505a_deepeval.csv  grafo_buscar.py  grafo_insere_lgpd.py  graphDB.json  graphDB.nq  graphdb_insere.py  ingest.py  ingest_async.py  ingest_by_chapter.py  ingest_from_debug.py  ingest_from_elastic.py  ingest_from_json.py  (+44 more)
old/: _sparql.txt  (+16 more)
saf-eval/: .gitignore  LICENSE  README.md  pyproject.toml
saf-eval/.github/workflows/: lint.yml  test.yml
saf-eval/examples/: basic_usage.py  custom_evaluation.py  custom_retriever.py  deduplication_example.py  few_shot_extraction_example.py  logging_example.py  self_containment_example.py  structured_output_example.py
saf-eval/saf_eval/: __init__.py  config.py
saf-eval/tests/: conftest.py  test_containment.py  test_deduplication.py  test_extraction.py  test_integration.py  test_retrieval.py
(+164 files in other folders)
